// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterExists /> should select "Exists" 1`] = `
.emotion-11 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-11:last-of-type > div:last-of-type {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-3 {
  border-top: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  width: 100%;
  background-color: #191919;
}

.emotion-9 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-8 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: #808080;
  color: #ffffff;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: transparent;
  color: #808080;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover {
  color: #ffffff;
}

.emotion-7 {
  color: #808080;
  text-align: center;
  padding: 8px;
}

<div
  className="emotion-11"
>
  <div
    className="emotion-3"
  >
    <button
      aria-label="Collapse Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        width={20}
      />
    </button>
    <h4
      className="emotion-2"
    >
      location.point
    </h4>
  </div>
  <div
    className="emotion-10"
  >
    <div
      className="emotion-9"
    >
      <FiltersReset
        assetId=""
        filter={
          Object {
            "attribute": "location.point",
            "type": "exists",
            "values": Object {
              "exists": false,
            },
          }
        }
        filterIndex={0}
        filters={
          Array [
            Object {
              "attribute": "location.point",
              "type": "exists",
              "values": Object {
                "exists": false,
              },
            },
          ]
        }
        onReset={[Function]}
        projectId="76917058-b147-4556-987a-0a0f11e46d9b"
      />
      <div
        className="emotion-8"
      >
        <div
          className="emotion-6"
        >
          <button
            className="emotion-4"
            onClick={[Function]}
            type="button"
          >
            Exists
          </button>
          <button
            className="emotion-5"
            onClick={[Function]}
            type="button"
          >
            Missing
          </button>
        </div>
        <div
          className="emotion-7"
        >
          <span>
            Show assets 
            <u>
              missing
            </u>
             the field "
            location.point
            "
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilterExists /> should select "Missing" 1`] = `
.emotion-11 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-11:last-of-type > div:last-of-type {
  border-bottom: 1px solid #4a4a4a;
}

.emotion-3 {
  border-top: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 {
  width: 100%;
  background-color: #191919;
}

.emotion-9 {
  padding: 16px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-8 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #808080;
  border-radius: 2px;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: #808080;
  color: #ffffff;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-4:hover {
  color: #ffffff;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-radius: 0;
  padding: 12px;
  background-color: transparent;
  color: #808080;
}

.emotion-5:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-5:hover {
  color: #ffffff;
}

.emotion-7 {
  color: #808080;
  text-align: center;
  padding: 8px;
}

<div
  className="emotion-11"
>
  <div
    className="emotion-3"
  >
    <button
      aria-label="Collapse Section"
      className="emotion-1"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-0"
        color="#808080"
        data-file-name="chevron.svg"
        width={20}
      />
    </button>
    <h4
      className="emotion-2"
    >
      location.point
    </h4>
  </div>
  <div
    className="emotion-10"
  >
    <div
      className="emotion-9"
    >
      <FiltersReset
        assetId=""
        filter={
          Object {
            "attribute": "location.point",
            "type": "exists",
            "values": Object {
              "exists": true,
            },
          }
        }
        filterIndex={0}
        filters={
          Array [
            Object {
              "attribute": "location.point",
              "type": "exists",
              "values": Object {
                "exists": true,
              },
            },
          ]
        }
        onReset={[Function]}
        projectId="76917058-b147-4556-987a-0a0f11e46d9b"
      />
      <div
        className="emotion-8"
      >
        <div
          className="emotion-6"
        >
          <button
            className="emotion-4"
            onClick={[Function]}
            type="button"
          >
            Exists
          </button>
          <button
            className="emotion-5"
            onClick={[Function]}
            type="button"
          >
            Missing
          </button>
        </div>
        <div
          className="emotion-7"
        >
          <span>
            Show assets with the field "
            location.point
            "
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
